--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ firebase-admin==6.0.1
 google-cloud-storage==2.18.2
 mlxtend==0.23.1
 groq==0.31.1
-sentence-transformers==5.1.0
+huggingface-hub==0.34.4
