--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ google-cloud-storage==2.18.2
 mlxtend==0.23.1
 groq==0.31.1
 huggingface-hub==0.34.4
+uvicorn==0.35.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+fastapi==0.116.1
